tests/ui/lifetimes/mismatched-lifetime-syntaxes-details/missing-lifetime-kind.stderr
error: eliding a lifetime that's named elsewhere is confusing
  --> $DIR/missing-lifetime-kind.rs:3:32
   |
LL | fn ampersand<'a>(x: &'a u8) -> &u8 {
   |                      --        ^^^ the same lifetime is elided here
   |                      |
   |                      the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
note: the lint level is defined here
  --> $DIR/missing-lifetime-kind.rs:1:9
   |
LL | #![deny(mismatched_lifetime_syntaxes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consistently use `'a`
   |
LL | fn ampersand<'a>(x: &'a u8) -> &'a u8 {
   |                                 ++

error: hiding a lifetime that's named elsewhere is confusing
  --> $DIR/missing-lifetime-kind.rs:10:31
   |
LL | fn brackets<'a>(x: &'a u8) -> Brackets {
   |                     --        ^^^^^^^^ the same lifetime is hidden here
   |                     |
   |                     the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'a`
   |
LL | fn brackets<'a>(x: &'a u8) -> Brackets<'a> {
   |                                       ++++

error: hiding a lifetime that's named elsewhere is confusing
  --> $DIR/missing-lifetime-kind.rs:17:28
   |
LL | fn comma<'a>(x: &'a u8) -> Comma<u8> {
   |                  --        ^^^^^^^^^ the same lifetime is hidden here
   |                  |
   |                  the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'a`
   |
LL | fn comma<'a>(x: &'a u8) -> Comma<'a, u8> {
   |                                  +++

error: eliding a lifetime that's named elsewhere is confusing
  --> $DIR/missing-lifetime-kind.rs:22:34
   |
LL | fn underscore<'a>(x: &'a u8) -> &'_ u8 {
   |                       --         ^^ the same lifetime is elided here
   |                       |
   |                       the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'a`
   |
LL - fn underscore<'a>(x: &'a u8) -> &'_ u8 {
LL + fn underscore<'a>(x: &'a u8) -> &'a u8 {
   |

error: aborting due to 4 previous errors

